tests/fsharp/typecheck/sigs/neg02.bsl

neg02.fs(6,8,6,15): parse error FS0046: The identifier 'virtual' is reserved for future use by F#

neg02.fs(6,8,6,15): parse error FS0010: Unexpected identifier in member definition
